--- a/style.css
+++ b/style.css
@@ -1,486 +1,480 @@
 * {
-      margin: 0;
+  margin: 0;
   padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 /* header start */
 #header {
-    display: flex; /* changes the links*/
-    align-items: center;
-    justify-content: space-between; /*put the links to the right side*/
-    padding: 20px 80px;
-    background: #FFD55E; 
-    box-shadow: 0 5px 10px rgba(128, 128, 128, 0.234);
+  display: flex; /* changes the links*/
+  align-items: center;
+  justify-content: space-between; /*put the links to the right side*/
+  padding: 20px 80px;
+  background: #FFD55E; 
+  box-shadow: 0 5px 10px rgba(128, 128, 128, 0.234);
 /*next four lines would keep the nav bar on top always*/
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
 
 #navbar {
-    display: flex; /*changed the links to go horizontal instead of veritcle*/
-    align-items: center;
-    justify-content: center;
+  display: flex; /*changed the links to go horizontal instead of veritcle*/
+  align-items: center;
+  justify-content: center;
 }
 #navbar li {
-    list-style: none; /*removes the dots for the list*/
-    padding: 0 20px;
-    position: relative;
+  list-style: none; /*removes the dots for the list*/
+  padding: 0 20px;
+  position: relative;
 }
 #navbar li a {
-    text-decoration: none; /*removes the underline*/
-    font-size: 16px;
-    font-weight: 600; /*changes the thickness*/
-    color: gray; /*change the color of links to black*/
-    transition: 0.3s ease; /* when hovering the links, a short transition ahppens*/
+  text-decoration: none; /*removes the underline*/
+  font-size: 16px;
+  font-weight: 600; /*changes the thickness*/
+  color: gray; /*change the color of links to black*/
+  transition: 0.3s ease; /* when hovering the links, a short transition ahppens*/
 }
 #navbar li a:hover,
 #navbar li a.active {
-    color: black;
+  color: black;
 }
 
 /*the line under the links*/
 #navbar li a.active::after,
 #navbar li a:hover::after { /*creating this would give the hover for other links*/
-    content: "";
-    width: 30%; /*gives the line the width*/
-    background: black;
-    height: 2px; 
-    bottom: -4px; /* moves the underline below the link*/
-    left: 20px; /*moves the underline left to right deoending on px*/
-    position: absolute;
+  content: "";
+  width: 30%; /*gives the line the width*/
+  background: black;
+  height: 2px; 
+  bottom: -4px; /* moves the underline below the link*/
+  left: 20px; /*moves the underline left to right deoending on px*/
+  position: absolute;
 }
 
 #mobile{ /*this is for the responsive icons to disappear*/
-    display: none;
-    align-items: center;
+  display: none;
+  align-items: center;
 }
 
 #close { /*have the x mark*/
-    display: none;
+  display: none;
 }
 
 .logo {
-    width: 10vh;
-    height: 10vh;
-    border: 3px solid black;
-    padding: 1vh;
-    border-radius: 50%;
-
+width: 10vh;
+height: 10vh;
+border: 3px solid black;
+padding: 1vh;
+border-radius: 50%;
 }
 
 
 /*home Page*/
 #hero {
-    background-image: url("../images/backgrounds/manholeMinion.jpg");
-    height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center; /*changes the length of the words*/
+  background-image: url("../images/backgrounds/manholeMinion.jpg");
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /*changes the length of the words*/
 }
 
 #hero h2{
-    padding: 50px 0 10px 0;
+  padding: 50px 0 10px 0;
 }
 #hero h1{
-    padding: 0 0 10px 0;
+  padding: 0 0 10px 0;
 }
 #hero p{
-    padding: 0 0 10px 0;
+  padding: 0 0 10px 0;
 }
 
 /*button on home page*/
 .Shop {
-    margin: 10px;
-    padding: 15px 30px; /*changes the size of button*/
-    text-align: center;
-    text-transform: uppercase;
-    transition: 0.5s;
-    background-size: 200%;
-    color: white; /*text color*/
-    border-radius: 10px; /*changes the corners of button*/
-    display: block;
-    border: 1px;
-    font-weight: 900;
-    box-shadow: 0px 0px 14px -5px #FFD55E;/*creates a shadow around the button*/
-    background-image: linear-gradient(45deg, orange 0%, #FFD55E 51%,orange 100%); /*have it to go to 45 degrees and have 3 different colors considering their position*/
-    cursor: pointer;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation; /*Enables zoom interactions*/
-
+  margin: 10px;
+  padding: 15px 30px; /*changes the size of button*/
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200%;
+  color: white; /*text color*/
+  border-radius: 10px; /*changes the corners of button*/
+  display: block;
+  border: 1px;
+  font-weight: 900;
+  box-shadow: 0px 0px 14px -5px #FFD55E;/*creates a shadow around the button*/
+  background-image: linear-gradient(45deg, orange 0%, #FFD55E 51%,orange 100%); /*have it to go to 45 degrees and have 3 different colors considering their position*/
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation; /*Enables zoom interactions*/
 }
 .Shop:hover{
-    background-position: right center;/*changes the direction*/
-    color: #fff;
-    text-decoration: none;
+  background-position: right center;/*changes the direction*/
+  color: #fff;
+  text-decoration: none;
 }
 .Shop:active{
-    transform: scale(0.95); /*changes the size when clicked*/
+  transform: scale(0.95); /*changes the size when clicked*/
 }
 
 /*slider*/
 
 #slider{ /*creates space around the section*/
-position: relative;
-overflow: hidden;
-padding: 20px;
-box-shadow: 0 5px 15px rgba(128, 128, 128, 0.417);
-
+  position: relative;
+  overflow: hidden;
+  padding: 20px;
+  box-shadow: 0 5px 15px rgba(128, 128, 128, 0.417);
 }
 
 .product-category{ /*Best selling*/
-    padding: 0 10vw;
-    font-size: 30px;
-    font-weight: 500;
-    margin-bottom: 40px;
-    text-transform: capitalize;
+  padding: 0 10vw;
+  font-size: 30px;
+  font-weight: 500;
+  margin-bottom: 40px;
+  text-transform: capitalize;
 }
 
 .product-container{ /*the container for the cards*/
-    padding: 0 10vw;
-    display: flex;
-    overflow-x: auto;
-    scroll-behavior: smooth;
+  padding: 0 10vw;
+  display: flex;
+  overflow-x: auto;
+  scroll-behavior: smooth;
 }
 
 .product-container::-webkit-scrollbar {
-    display: none; /*this is the scroll bar that scrolls through the containers*/
+  display: none; /*this is the scroll bar that scrolls through the containers*/
 
 }
 
 .product-card{
-    flex: 0 0 auto; /*gave a flex box to give images their size*/
-    width: 250px;
-    height: 450px;
-    margin-right: 40px; /*adds space between cards*/
+  flex: 0 0 auto; /*gave a flex box to give images their size*/
+  width: 250px;
+  height: 450px;
+  margin-right: 40px; /*adds space between cards*/
 }
 
 .product-image{
-    position: relative;
-    overflow: hidden;
-    height: 350px;
-    width: 100%;
+  position: relative;
+  overflow: hidden;
+  height: 350px;
+  width: 100%;
 }
 
 
 .product-pic{ /*this is the picture inside the card*/
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    border: 1px solid black;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border: 1px solid black;
 }
 
 
 .discount-tag{
-    position: absolute;
-    background: black;
-    padding: 5px;
-    border-radius: 5px;
-    color: #FFD55E;
-    right: 1px;
-    text-transform: capitalize;
+  position: absolute;
+  background: black;
+  padding: 5px;
+  border-radius: 5px;
+  color: #FFD55E;
+  right: 1px;
+  text-transform: capitalize;
 }
 
 .card-btn {  /*add to wishlist button*/
-    position: absolute;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%); /*merges to the left*/
-    padding: 10px; /*adds space to the button*/
-    width: 90%; /*makes sure that this doesn't fill the card from left to right*/
-    text-transform: capitalize;
-    border: none; /*this line and the next one deletes the lines from the button*/
-    outline: none;
-    background-color: grey;
-    border-radius: 5px;
-    transition: 0.5s;
-    cursor: pointer;
-    opacity: 0;
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%); /*merges to the left*/
+  padding: 10px; /*adds space to the button*/
+  width: 90%; /*makes sure that this doesn't fill the card from left to right*/
+  text-transform: capitalize;
+  border: none; /*this line and the next one deletes the lines from the button*/
+  outline: none;
+  background-color: grey;
+  border-radius: 5px;
+  transition: 0.5s;
+  cursor: pointer;
+  opacity: 0;
 }
 
 .product-card:hover .card-btn {
-    opacity: 1; /*when hovering the card, the button "add to wishlist" appears*/
+  opacity: 1; /*when hovering the card, the button "add to wishlist" appears*/
 }
 
 .card-btn:hover { /*when hovering over the button, it changes color*/
-    background: black;
-    color: #FFD55E;
+  background: black;
+  color: #FFD55E;
 }
 
 .product-info { /*the name, description, and price adjustments*/
-    width: 100%;
-    height: 100px;
-    padding-top: 10px;
-    padding-left: 15px;/*gives space to the left, which shifts the texts to the right*/
-    border: 1px solid black;
-
+  width: 100%;
+  height: 100px;
+  padding-top: 10px;
+  padding-left: 15px;/*gives space to the left, which shifts the texts to the right*/
+  border: 1px solid black;
 }
 .product-brand { /*the title of each character*/
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .product-description { /*the description of each character*/
-    width: 100%;
-    height: 20px;
-    line-height: 20px;
-    overflow: hidden;
-    opacity: 0.5; /*gives the grey color for the text */
-    text-transform: capitalize;
-    margin: 5px 0;
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
+  overflow: hidden;
+  opacity: 0.5; /*gives the grey color for the text */
+  text-transform: capitalize;
+  margin: 5px 0;
 }
 
 .price{ /*the price after the discount*/
-    font-weight: 900;
-    font-size: 20px;
+  font-weight: 900;
+  font-size: 20px;
 }
 
-.actual-price{ /*the actual price for the character*/
-    margin-left: 20px;
-    opacity: 0.5;
-    text-decoration: line-through; /*gives the line through the text*/
+.ac  ual-price{ /*the actual price for the character*/
+  margin-left: 20px;
+  opacity: 0.5;
+  text-decoration: line-through; /*gives the line through the text*/
 }
 
 
 
 .nxt-btn,
 .pre-btn{
-    border: none;
-    width: 11vw;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(90deg, #FFD55E 0%, white 100%);
-    cursor: pointer;
-    z-index: 9;
+  border: none;
+  width: 11vw;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, #FFD55E 0%, white 100%);
+  cursor: pointer;
+  z-index: 9;
 }
 
 .pre-btn{
-    left: 0;
+  left: 0;
 }
 .nxt-btn{
-    right: 0;
-    transform: scaleX(-1);
-
+  right: 0;
+  transform: scaleX(-1);
 }
 
 .pre-btn img,
 .nxt-btn img{ /* changes the color and size of button images*/
-    opacity: 0.4;
-    height: 100px;
-    width: 100px;
+  opacity: 0.4;
+  height: 100px;
+  width: 100px;
 }
 
 .pre-btn:hover img,
 .nxt-btn:hover img{ /*when hovering the button, the button appears with color and has a transition*/
-    opacity: 1;
-    transition: 0.4s;
+  opacity: 1;
+  transition: 0.4s;
 }
 
 /*Subscribe*/
 
 #subscribe {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    background-image: url("images/backgrounds/banna.jpeg");
-    height: 13vw;
-    box-shadow: 0 5px 5px rgba(128, 128, 128, 0.234);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  background-image: url("images/backgrounds/banna.jpeg");
+  height: 13vw;
+  box-shadow: 0 5px 5px rgba(128, 128, 128, 0.234);
 }
 .subtext{
-    margin-left: 5vw;
+  margin-left: 5vw;
 }
 .subtext h4 {
-    font-size: 22px;
-    font-weight: 700;
-    color: black;
+  font-size: 22px;
+  font-weight: 700;
+  color: black;
 }
 #subscribe input{
-    height: 2rem;
-    padding: 0 1.25em;
-    font-size: 14px;
-    width: 100%;
-    border-radius: 4px;
-    outline: none;
+  height: 2rem;
+  padding: 0 1.25em;
+  font-size: 14px;
+  width: 100%;
+  border-radius: 4px;
+  outline: none;
 }
 .signup{
-    height: 2rem;
-    padding: 0 1.50em;
-    border-radius: 4px;
-    background-color: #6F8FAF;
-    color: white;
-    white-space: nowrap; /*makes "sign up" into one line*/
+  height: 2rem;
+  padding: 0 1.50em;
+  border-radius: 4px;
+  background-color: #6F8FAF;
+  color: white;
+  white-space: nowrap; /*makes "sign up" into one line*/
 }
 .form{
-    display: flex;
-    width: 40%;
-    margin-right: 4vw;
+  display: flex;
+  width: 40%;
+  margin-right: 4vw;
 }
 
 /*footer*/
 
 footer { /*gives the footer flexbox and space-between*/
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background-color: #FFD55E;
-    padding: 10px;
-    
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: #FFD55E;
+  padding: 10px;
 }
 footer .col { /*the column in the footer*/
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 30px;
 }
 footer h4 { /*changing the titles of each footer titles*/
-    font-size: 20px;
-    padding-bottom: 20px;
+  font-size: 20px;
+  padding-bottom: 20px;
 }
 footer p { /*gives space between each information*/
-    font-size: 16px;
-    margin: 0 0 8px 0;
+  font-size: 16px;
+  margin: 0 0 8px 0;
 }
 footer a { /* gives space and changes the links*/
-    font-size: 16px;
-    text-decoration: none;
-    color: black;
-    margin-bottom: 10px; /*gives space between each link*/
+  font-size: 16px;
+  text-decoration: none;
+  color: black;
+  margin-bottom: 10px; /*gives space between each link*/
 }
 footer .follow{ /*gives space above to seperate from the contact*/
-    margin-top: 20px;
+  margin-top: 20px;
 }
 footer .follow a{ /*social media links*/
-    color: grey;
-    padding-right: 8px; /*gives space between each links*/
-    cursor: pointer;
-    font-size: 22px;
+  color: grey;
+  padding-right: 8px; /*gives space between each links*/
+  cursor: pointer;
+  font-size: 22px;
 }
 footer .install .row img{ /*gives borders around the app images */
-    border: 1px solid black;
-    border-radius: 6px;
+  border: 1px solid black;
+  border-radius: 6px;
 }
 footer .install img{ /*gives space in the install app column*/
-    margin: 10px 0 15px 0;
+  margin: 10px 0 15px 0;
 }
 footer .col a:hover{ /*when hovering over footer links, it would change it to lightblue*/
-    color: #6F8FAF;
+  color: #6F8FAF;
 }
 footer .copyright {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 /*-----------------------------------------*/
 /*Products Page*/
 .products{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, auto));
-    grid-gap: 50px;
-    margin: 50px auto;
-    padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, auto));
+  grid-gap: 50px;
+  margin: 50px auto;
+  padding: 20px;
 }
 .product{
-    padding: 10px;
-    border: 1px solid black;
-    border-radius: 10px;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.352);
-    background-color: #6F8FAF;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.352);
+  background-color: #6F8FAF;
 }
 .products img{
-    width: 100%;
-    height: 250px;
-    display: block;
-    border-radius: 5%;
+  width: 100%;
+  height: 250px;
+  display: block;
+  border-radius: 5%;
 }
 .product .title{
-    border-bottom: 1px solid black; /*creates a line below the title*/
-    text-align: center;
-    font-weight: 800;
-    padding: 30px 0 20px 0;
+  border-bottom: 1px solid black; /*creates a line below the title*/
+  text-align: center;
+  font-weight: 800;
+  padding: 30px 0 20px 0;
 }
 .product .description{
-    text-align: center;
-    padding: 0 20px 20px 20px;
+  text-align: center;
+  padding: 0 20px 20px 20px;
 }
 .product .price{
-    text-align: center;
+  text-align: center;
 }
 .products h4{
-    background-color: red;
-    top: 15px;
-    z-index: 1;
+  background-color: red;
+  top: 15px;
+  z-index: 1;
 }
 /*-------------------------------------*/
 /*Contact Page*/
 #contact-container{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 20px 100px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 20px 100px;
 }
 #contact-container::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: url(images/backgrounds/Minions-Despicable-Me-Cute-Yellow-Art-Illustration-ipad-air.jpg);
-    background-size: cover;
-    z-index: -1;
-    filter: blur(3px);
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: url(images/backgrounds/Minions-Despicable-Me-Cute-Yellow-Art-Illustration-ipad-air.jpg);
+  background-size: cover;
+  z-index: -1;
+  filter: blur(3px);
 }
 
 .contact-box{
-    width: 500px;
-    background-color: white;
-    position: relative;
-    border-radius: 15px;
-    box-shadow: 0 0 20px 0 white;
+  width: 500px;
+  background-color: white;
+  position: relative;
+  border-radius: 15px;
+  box-shadow: 0 0 20px 0 white;
 }
 .contact-box form{
-    margin: 35px;
-    flex-wrap: wrap;
-    display: flex;
-    justify-content: center;
+  margin: 35px;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
 }
 .input-field{
-    width: 400px;
-    height: 40px;
-    margin-top: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
-    border-radius: 15px;
-    outline: none;
+  width: 400px;
+  height: 40px;
+  margin-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 15px;
+  outline: none;
 }
 .textarea-field{
-    height: 150px;
-    padding-top: 10px;
+  height: 150px;
+  padding-top: 10px;
 }
 .contact-button{
-    border-radius: 20px;
-    padding: 10px;
-    margin-top: 18px;
-    background-color: red;
-    cursor: pointer;
+  border-radius: 20px;
+  padding: 10px;
+  margin-top: 18px;
+  background-color: red;
+  cursor: pointer;
 }
 .contact-box h4{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 7%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 7%;
 }
 /*-------------------------------------*/
 /*MediaQ*/
