--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   font-family: sans-serif;
 }
 
+/* added certain css components to the top for linting */
 .products img { /* products images is right here bc linting */
   width: 100%;
   height: 250px;
@@ -17,6 +18,10 @@
   opacity: 0.4;
   height: 100px;
   width: 100px;
+}
+
+footer .install img { /* gives space in the install app column */
+  margin: 10px 0 15px;
 }
 
 .pre-btn:hover img,
@@ -68,10 +73,6 @@ footer .follow a { /* social media links */
   padding-right: 8px; /* gives space between each links */
   cursor: pointer;
   font-size: 22px;
-}
-
-footer .install img { /* gives space in the install app column */
-  margin: 10px 0 15px;
 }
 
 footer .install .row img { /* gives borders around the app images */
@@ -195,7 +196,7 @@ footer .copyright {
   display: block;
   border: 1px;
   font-weight: 900;
-  box-shadow: 0px 0px 14px -5px #ffd55e;/* creates a shadow around the button */
+  box-shadow: 0 0 14px -5px #ffd55e;/* creates a shadow around the button */
   background-image: linear-gradient(45deg, orange 0%, #ffd55e 51%, orange 100%);
 
   /* have it to go to 45 degrees and have 3 different colors considering their position */
@@ -221,7 +222,7 @@ footer .copyright {
   position: relative;
   overflow: hidden;
   padding: 20px;
-  box-shadow: 0 5px 15px rgba(128, 128, 128, 0.417);
+  box-shadow: 0 5px 15px rgba(128, 128, 128, 41.7%);
 }
 
 .product-category { /* Best selling */
@@ -241,7 +242,6 @@ footer .copyright {
 
 .product-container::-webkit-scrollbar {
   display: none; /* this is the scroll bar that scrolls through the containers */
-
 }
 
 .product-card {
@@ -344,7 +344,7 @@ footer .copyright {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(90deg, #FFD55E 0%, white 100%);
+  background: linear-gradient(90deg, #ffd55e 0%, white 100%);
   cursor: pointer;
   z-index: 9;
 }
